--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -32,13 +32,14 @@
                 android:layout_height="wrap_content"
                 android:background="@color/tab_back"
                 app:tabGravity="fill"
-                app:tabIndicatorColor="@color/tab_selected"
                 app:tabIndicator="@drawable/tab_selected_background"
+                app:tabIndicatorColor="@color/tab_selected"
                 app:tabIndicatorGravity="stretch"
                 app:tabMode="scrollable"
                 app:tabRippleColor="@null"
                 app:tabSelectedTextColor="@color/white"
-                app:tabTextAppearance="@style/TabTextAppearance" />
+                app:tabTextAppearance="@style/TabTextAppearance"
+                app:tabTextColor="@color/translucent" />
         </FrameLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
