--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.VITTY" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.VITTY" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/background</item>
         <item name="colorPrimaryVariant">@color/background</item>
@@ -13,7 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/poppins_400</item>
+        <item name="android:textColor">@color/translucent</item>
         <item name="android:windowBackground">@color/background</item>
+
+        <item name="android:navigationBarColor">@color/background</item>
     </style>
 
     <style name="TabTextAppearance" parent="">
@@ -21,10 +24,15 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="TabTextAppearance2" parent="">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/poppins_600</item>
+    </style>
+
     <style name="TitleTextAppearance" parent="">
         <item name="android:textSize">22sp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/poppins_700</item>
-
     </style>
 </resources>
