--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -16,9 +16,9 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:alpha="0.7"
+            android:contentDescription="@string/todo"
             android:scaleType="centerCrop"
-            android:src="@drawable/intro_background"
-            android:contentDescription="@string/todo" />
+            android:src="@drawable/intro_background" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/intro_pager"
@@ -66,14 +66,14 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="36dp"
         android:background="@drawable/google_login_button"
+        android:contentDescription="@string/todo"
         android:fontFamily="@font/poppins_600"
         android:padding="15dp"
         android:src="@drawable/ic_login_google"
         android:textAllCaps="false"
         android:textSize="18sp"
         android:visibility="gone"
-        tools:visibility="visible"
-        android:contentDescription="@string/todo" />
+        tools:visibility="visible" />
 
 
 </LinearLayout>
