--- a/app/src/main/res/layout/card_period.xml
+++ b/app/src/main/res/layout/card_period.xml
@@ -18,16 +18,16 @@
         android:layout_height="match_parent"
         android:alpha="0.8"
         android:contentDescription="@string/active_background"
-        android:src="@drawable/tab_selected_background"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:src="@drawable/tab_selected_background" />
 
     <ImageView
         android:id="@+id/expanded_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/exp_background"
-        android:src="@drawable/expanded_background"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:src="@drawable/expanded_background" />
 
     <LinearLayout
         android:layout_width="match_parent"
