--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,10 @@
     <color name="tab_selected">#E6126AFC</color>
     <color name="tab_selected_2">#1A126AFC</color>
     <color name="background">#041727</color>
-    <color name="translucent">#5B7CA1</color>
+    <color name="translucent">#688FBC</color>
     <color name="border_1">#AD5B7CA1</color>
     <color name="border_2">#1A5B7CA1</color>
     <color name="intro_tab">#082F63</color>
+    <color name="next_class">#99126AFC</color>
+    <color name="next_class_2">#1A126AFC</color>
 </resources>
