--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,4 +35,11 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/poppins_700</item>
     </style>
+
+    <style name="ThemeOverlay.VITTY.AppWidgetContainer" parent="">
+        <item name="android:fontFamily">@font/poppins_400</item>
+        <item name="android:textColor">@color/translucent</item>
+        <item name="appWidgetBackgroundColor">@color/background</item>
+        <item name="appWidgetTextColor">@color/translucent</item>
+    </style>
 </resources>
