--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/instructions_appbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/instructions_appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="20dp"
-            android:paddingTop="20dp"
-            android:paddingEnd="20dp"
-            android:paddingBottom="18dp"
-            app:title="Instructions"
-            app:titleTextAppearance="@style/TitleTextAppearance"
-            app:titleTextColor="@color/white" />
+            android:background="@color/background">
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <com.google.android.material.appbar.MaterialToolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="20dp"
+                android:paddingTop="20dp"
+                android:paddingEnd="20dp"
+                android:paddingBottom="18dp"
+                app:title="Instructions"
+                app:titleTextAppearance="@style/TitleTextAppearance"
+                app:titleTextColor="@color/white" />
 
-    <TextView
-        android:id="@+id/greeting"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="25dp"
-        android:layout_weight="1"
-        android:text="@string/greeting" />
+        </com.google.android.material.appbar.AppBarLayout>
 
+        <fragment
+            android:id="@+id/instructions"
+            android:name="com.dscvit.vitty.ui.instructions.InstructionsFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-    <Button
-        android:id="@+id/done_button"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="30dp"
-        android:backgroundTint="@color/tab_selected"
-        android:fontFamily="@font/poppins_600"
-        android:padding="15dp"
-        android:src="@drawable/ic_login_google"
-        android:text="@string/done"
-        android:textAllCaps="false"
-        android:textSize="19sp" />
+        <Button
+            android:id="@+id/done_button"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="30dp"
+            android:backgroundTint="@color/tab_selected"
+            android:fontFamily="@font/poppins_600"
+            android:letterSpacing="0"
+            android:padding="15dp"
+            android:src="@drawable/ic_login_google"
+            android:text="@string/done"
+            android:textAllCaps="false"
+            android:textSize="19sp" />
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
