feat: notification settings added

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,8 +15,8 @@
         <item name="android:fontFamily">@font/poppins_400</item>
         <item name="android:textColor">@color/translucent</item>
         <item name="android:windowBackground">@color/background</item>
-        <item name="android:itemBackground">@color/tab_back</item>
         <item name="android:navigationBarColor">@color/background</item>
+        <item name="popupMenuBackground">@color/tab_back</item>
     </style>
 
     <style name="TabTextAppearance" parent="">
