--- a/app/src/main/res/layout/today_widget.xml
+++ b/app/src/main/res/layout/today_widget.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingStart="20dp"
-            android:paddingTop="20dp"
+            android:paddingTop="15dp"
             android:paddingEnd="0dp"
             android:text="@string/today_schedule"
             android:textSize="16sp" />
@@ -33,21 +33,33 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/todo"
             android:paddingStart="0dp"
-            android:paddingTop="20dp"
+            android:paddingTop="15dp"
             android:paddingEnd="20dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_vitty" />
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/widget_header"
+        android:layout_margin="20dp"
+        android:alpha="0.8"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:text="@string/no_classes_today"
+        android:textAlignment="center" />
+
     <ListView
-        android:layout_marginTop="10dp"
         android:id="@+id/periods"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/widget_header"
-        tools:listitem="@layout/item_period"
-        android:divider="@null" />
+        android:layout_marginTop="10dp"
+        android:background="@color/background"
+        android:divider="@null"
+        tools:listitem="@layout/item_period" />
 
 </RelativeLayout>
 
