--- a/app/src/main/res/drawable/ic_down_arrow.xml
+++ b/app/src/main/res/drawable/ic_down_arrow.xml
@@ -3,11 +3,11 @@
     android:height="10dp"
     android:viewportWidth="18"
     android:viewportHeight="10">
-  <path
-      android:pathData="M1,1L9,9L17,1"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.84615"
-      android:fillColor="#00000000"
-      android:strokeColor="#5B7CA1"
-      android:strokeLineCap="round"/>
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M1,1L9,9L17,1"
+        android:strokeWidth="1.84615"
+        android:strokeColor="#5B7CA1"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
