--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,31 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:tint="#FFFFFF"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <group
-        android:scaleX="0.207"
-        android:scaleY="0.207"
-        android:translateX="29.16"
-        android:translateY="36.35244">
-        <group android:translateY="141.67969">
-            <path
-                android:fillColor="#FFFFFF"
-                android:pathData="M51,-110L32,-0L23,-0L4,-110L14,-110L27.203125,-23.109375Q27.203125,-23.109375,27.609375,-16Q27.6875,-18.4375,28.109375,-23.109375L42,-110L51,-110Z" />
-            <path
-                android:fillColor="#FFFFFF"
-                android:pathData="M74,0L64,0L64,-110L74,-110L74,0Z" />
-            <path
-                android:fillColor="#FFFFFF"
-                android:pathData="M130,-101L113,-101L113,0L103,0L103,-101L86,-101L86,-110L130,-110L130,-101Z" />
-            <path
-                android:fillColor="#FFFFFF"
-                android:pathData="M179,-101L162,-101L162,0L152,0L152,-101L135,-101L135,-110L179,-110L179,-101Z" />
-            <path
-                android:fillColor="#FFFFFF"
-                android:pathData="M237,-109.359375L223,-64.875Q220.34375,-58.203125,216,-42.59375L216,0L206,0L206,-42.59375Q204.96875,-47.9375,202.82812,-53.84375Q199.29688,-63.96875,199,-64.875L185,-109.375Q185,-109.4375,185,-110L195,-110L211.10938,-54.96875L227,-110L237,-110Q237,-109.5,237,-109.359375Z" />
-        </group>
-    </group>
+  <group android:scaleX="1.1555979"
+      android:scaleY="1.1555979"
+      android:translateX="25.95"
+      android:translateY="42.44402">
+    <path
+        android:pathData="M15.1499,4.4801L12.2231,0H48.2226L44.9056,4.4801H38.7594L29.0034,18.4183H22.8571L32.2229,4.4801H15.1499Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="31.4786"
+            android:startX="14.065"
+            android:endY="-3.35735"
+            android:endX="50.1996"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF126AFC"/>
+          <item android:offset="1" android:color="#00126AFC"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M6.8042,1.6743H0C2.0413,4.6079 12.0947,18.4345 13.07,19.3124C14.0454,20.1902 16.3301,20.5471 17.9825,18.3958L25.9531,7.3459H19.635L14.9692,13.7999L6.8042,1.6743Z"
+        android:fillColor="#ffffff"/>
+  </group>
 </vector>
