--- a/app/src/main/res/menu/schedule_menu.xml
+++ b/app/src/main/res/menu/schedule_menu.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_logout"
-        android:orderInCategory="2"
-        android:title="@string/logout" />
+        android:orderInCategory="3"
+        android:title="@string/logout"/>
 
     <item
         android:id="@+id/notifications"
-        android:icon="@drawable/ic_logout"
         android:orderInCategory="1"
         android:title="@string/notifications" />
+
+    <item
+        android:id="@+id/battery"
+        android:orderInCategory="2"
+        android:title="@string/battery" />
 
 </menu>
