feat: instructions added

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -54,7 +54,6 @@
             android:backgroundTint="@color/tab_selected"
             android:fontFamily="@font/poppins_600"
             android:letterSpacing="0"
-            android:padding="15dp"
             android:src="@drawable/ic_login_google"
             android:text="@string/next"
             android:textAllCaps="false"
@@ -73,7 +72,8 @@
             android:background="@drawable/google_login_button"
             android:contentDescription="@string/todo"
             android:fontFamily="@font/poppins_600"
-            android:padding="15dp"
+            android:padding="12dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/ic_login_google"
             android:textAllCaps="false"
             android:textSize="18sp"
