--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="tab_selected_2">#1A126AFC</color>
     <color name="background">#041727</color>
     <color name="translucent">#688FBC</color>
+    <color name="translucent_imp">#9DBADC</color>
+    <color name="translucent_head">#C3D4E8</color>
     <color name="border_1">#AD5B7CA1</color>
     <color name="border_2">#1A5B7CA1</color>
     <color name="intro_tab">#082F63</color>
