--- a/app/src/main/res/menu/schedule_menu.xml
+++ b/app/src/main/res/menu/schedule_menu.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_logout"
         android:orderInCategory="3"
-        android:title="@string/logout"/>
+        android:title="@string/logout" />
 
     <item
         android:id="@+id/notifications"
