--- a/app/src/main/res/menu/schedule_menu.xml
+++ b/app/src/main/res/menu/schedule_menu.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_logout"
-        android:orderInCategory="3"
+        android:orderInCategory="4"
         android:title="@string/logout" />
 
     <item
@@ -16,4 +16,8 @@
         android:orderInCategory="2"
         android:title="@string/battery" />
 
+    <item
+        android:id="@+id/share"
+        android:orderInCategory="3"
+        android:title="@string/share" />
 </menu>
