--- a/app/src/main/res/xml/next_class_widget_info.xml
+++ b/app/src/main/res/xml/next_class_widget_info.xml
@@ -3,7 +3,8 @@
     android:initialKeyguardLayout="@layout/next_class_widget"
     android:initialLayout="@layout/next_class_widget"
     android:minWidth="250dp"
-    android:minHeight="150dp"
+    android:minHeight="120dp"
+    android:minResizeHeight="100dp"
     android:previewImage="@drawable/next_class_widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
