--- a/app/src/main/res/xml/today_widget_info.xml
+++ b/app/src/main/res/xml/today_widget_info.xml
@@ -4,6 +4,7 @@
     android:initialLayout="@layout/today_widget"
     android:minWidth="250dp"
     android:minHeight="200dp"
+    android:minResizeHeight="100dp"
     android:previewImage="@drawable/today_widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="18000000"
